# Medical_Help_AI_Agent

./: .gitignore  agent_app.py  app.py  client.py  graph_state.py  pyproject.toml
Agents/: clinical_agent.py  receptionist_agent.py
Data/: database.py
Prompts/: clinical_agent_prompt.py  receptionist_agent_prompt.py
RAG/: embeddings.py  extract_pdf.py  process_pdf.py  save_data_to_vectordb.py  text_splitter.py  vector_store.py
