[project]
name = "medical-help-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "fastapi[standard]>=0.120.2",
    "langchain>=1.0.2",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.0.0",
    "langchain-huggingface>=1.0.0",
    "langchain-tavily>=0.2.12",
    "langgraph>=1.0.1",
    "mysql-connector-python>=9.5.0",
    "psycopg2>=2.9.11",
    "pypdf2>=3.0.1",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.51.0",
]
